@@ -1,7 +1,8 @@
-$Id: ChangeLog,v 1.242 2005/07/14 08:55:54 freckle Exp $
+$Id: ChangeLog,v 1.243 2005/07/14 08:57:53 freckle Exp $
 
 2005-07-13  Matthias Ringwald  <mringwal@.inf.ethz.ch>
     * arch/avr/os/thread.c: Rewrote CS in NutThreadCreate
+    * os/thread.c: Rewrote CS in NutThreadSetPriority
 
 2005-07-13  Matthias Ringwald  <mringwal@.inf.ethz.ch>
     * os/event.c: Rewrote NutEventWait to gain short critical sections
